--- a/dataworkflow.html
+++ b/dataworkflow.html
@@ -56,7 +56,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Honduras Security</a>
+          <a class="navbar-brand" href="index.html">Honduras Security</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -83,7 +83,7 @@
           <h1 class="page-header">Data Workflow</h1>
           <p></p>
 
-          <iframe src="https://tangerine007.shinyapps.io/hackathon/" style="width:900px;height:750px">
+          <iframe src="http://rpubs.com/bcarancibia/82632" style="width:1050px;height:750px">
           <p>Your browser does not support iframes.</p>
           </iframe>
 
