--- a/dataworkflow.html
+++ b/dataworkflow.html
@@ -75,6 +75,7 @@
           <ul class="nav nav-sidebar">
             <li><a href="index.html">Overview </a></li>
             <li class="active"><a href="dataworkflow.html">Data Workflow<span class="sr-only">(current)</span></a></li>
+            <li><a href="countries.html">Country Forecast</a></li>
             <li><a href="map.html">Maps</a></li>
             <li><a href="data.html">Data Query Builder</a></li>
           </ul>
