--- a/map.html
+++ b/map.html
@@ -76,6 +76,7 @@
           <ul class="nav nav-sidebar">
             <li><a href="index.html">Overview </a></li>
             <li><a href="dataworkflow.html">Data Workflow</a></li>
+            <li><a href="countries.html">Country Forecast</a></li>
             <li class="active"><a href="map.html">Maps <span class="sr-only">(current)</span></a></li>
             <li><a href="data.html">Data Query Builder</a></li>
           </ul>
@@ -130,10 +131,10 @@ Transaction Values over the past five years (2010-2015).
       <ul class="pagination">
   <li class="active"><a href="map.html">2010</a></li>
   <li><a href="map2.html">2011</a></li>
-  <li><a href="#">2012</a></li>
-  <li><a href="#">2013</a></li>
-  <li><a href="#">2014</a></li>
-  <li><a href="#">2015</a></li>
+  <li><a href="map3.html">2012</a></li>
+  <li><a href="map4.html">2013</a></li>
+  <li><a href="map5.html">2014</a></li>
+  <li><a href="map6.html">2015</a></li>
   </ul>
 </footer>
   </body>
