--- a/data.html
+++ b/data.html
@@ -75,6 +75,7 @@
           <ul class="nav nav-sidebar">
             <li><a href="index.html">Overview</a></li>
             <li><a href="dataworkflow.html">Data Workflow</a></li>
+            <li><a href="countries.html">Country Forecast</a></li>
             <li><a href="map.html">Maps</a></li>
             <li class="active"><a href="data.html">Data Query Builder <span class="sr-only">(current)</span></a></li>
           </ul>
