--- a/ethiopia.html
+++ b/ethiopia.html
@@ -76,64 +76,40 @@
           <ul class="nav nav-sidebar">
             <li><a href="index.html">Overview </a></li>
             <li><a href="dataworkflow.html">Data Workflow</a></li>
-            <li><a href="countries.html">Country Forecast</a></li>
-            <li class="active"><a href="map.html">Maps <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="countries.html">Country Forecast <span class="sr-only">(current)</span></a></li>
+            <li><a href="map.html">Maps</a></li>
             <li><a href="data.html">Data Query Builder</a></li>
           </ul>
         </div>
          <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Foreign Aid Amounts 2011</h1>
-
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript">
-      google.load("visualization", "1", {packages:["geochart"]});
-      google.setOnLoadCallback(drawRegionsMap);
-
-      function drawRegionsMap() {
-
-        var data = google.visualization.arrayToDataTable([
-          ['Country', 'Disbursement Amount'],
-          ['Burkina Faso', 292354500],
-          ['Chad', 72632147.7],
-          ['The Democratic Republic of the Congo', 449557022],
-          ['Cote d Ivoire', 148624055.2],
-          ['Ethiopia', 338534967],
-          ['Haiti',  362393400],
-          ['Honduras', 95772360],
-          ['Kyrgyzstan', 270270286.6],
-          ['Laos', 45223550],
-          ['Madagascar', 34607888.2],
-          ['Malawi', 185057428],
-          ['Nepal', 2156611000],
-          ['Senegal', 122615900],
-          ['Tanzania', 493839822],
-          ['Timor-Leste', 261363600],
-          ['Uganda', 258533000]
-        ]);
-
-                var options = {
-          colorAxis: {colors: ['#00853f', 'black', '#e31b23']},
-          defaultColor: '#f5f5f5',
-        };
-        var chart = new google.visualization.GeoChart(document.getElementById('regions_div'));
-
-        chart.draw(data, options);
-      }
-    </script>
+          <h1 class="page-header">Ethiopia Foreign Aid Amounts</h1>
 <p>
-Transaction Values over the past five years (2010-2015).
+Transaction Values for Ethiopia
 </p>
+
+<img src="http://i.imgur.com/ltubaF5.png" alt="Ethiopia" style="width:1050px;height:750px">
   </head>
   <body>
-    <div id="regions_div" style="width: 900px; height: 500px;"></div>
+
 <footer>
       <ul class="pagination">
-  <li><a href="map.html">2010</a></li>
-  <li  class="active"><a href="map2.html">2011</a></li>
-  <li><a href="map3.html">2012</a></li>
-  <li><a href="map4.html">2013</a></li>
-  <li><a href="map5.html">2014</a></li>
-  <li><a href="map6.html">2015</a></li>
+  <li><a href="countries.html">Burkina</a></li>
+  <li><a href="chad.html">Chad</a></li>
+  <li><a href="drc.html">DRC</a></li>
+  <li><a href="civ.html">Cote D'Ivoire</a></li>
+  <li class="active"><a href="ethiopia.html">Ethiopia</a></li>
+  <li><a href="haiti.html">Haiti</a></li>
+  <li><a href="honduras.html">Honduras</a></li>
+  <li><a href="kyrgz.html">Kyrgyzstan</a></li>
+  <li><a href="laos.html">Laos</a></li>
+  <li><a href="mada.html">Madagascar</a></li>
+  <li><a href="malawi.html">Malawi</a></li>
+  <li><a href="nepal.html">Nepal</a></li>
+  <li><a href="senegal.html">Senegal</a></li>
+  <li><a href="tanzania.html">Tanzania</a></li>
+  <li><a href="timor.html">Timor-Leste</a></li>
+  <li><a href="uganda.html">Uganda</a></li>
+
   </ul>
 </footer>
   </body>
