--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <ul class="nav nav-sidebar">
             <li class="active"><a href="index.html">Overview <span class="sr-only">(current)</span></a></li>
             <li><a href="dataworkflow.html">Data Workflow</a></li>
-
+            <li><a href="countries.html">Country Forecast</a></li>
             <li><a href="map.html">Maps</a></li>
             <li><a href="data.html">Data Query Builder</a></li>
           </ul>
