--- a/map4.html
+++ b/map4.html
@@ -76,6 +76,7 @@
           <ul class="nav nav-sidebar">
             <li><a href="index.html">Overview </a></li>
             <li><a href="dataworkflow.html">Data Workflow</a></li>
+            <li><a href="countries.html">Country Forecast</a></li>
             <li class="active"><a href="map.html">Maps <span class="sr-only">(current)</span></a></li>
             <li><a href="data.html">Data Query Builder</a></li>
           </ul>
